# RepoMind

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
demo_project/tests/: test_user_service.py
docs/: mcp_usage.md  产品设计文档.md  安全设计文档.md  技术可行性调研.md  技术架构文档.md  数据库设计文档.md  架构决策记录.md  用户使用手册.md  需求分析.md
docs/design/: API接口文档.md  CLI重构方案.md  RepoMind智能体诊断重构方案.md  动态索引一致性与时效性方案.md  技术架构文档.md
docs/dev/: 代码审查修复报告v2.md  代码审查报告v2.md  开发环境搭建指南.md
docs/requirements/: 问题定义.md
docs/testing/: agent_benchmark.md  retrieval_comparison.json  测试计划文档.md  评测结果分析与优化思路.md
eval/: run_host_comparison.py
eval/cases/: benchmark_cases.json  benchmark_cases_reviewed.json
eval/reports/: latest_failure_report.json  latest_failure_report.md
src/repomind/: __init__.py  __main__.py
tests/: conftest.py
tests/integration/: test_evidence_engine.py  test_index_service.py  test_langgraph_agent.py  test_mcp_server.py  test_query_service.py  test_rag_pipeline.py  test_rca_service.py
tests/unit/: test_call_graph.py  test_cli.py  test_cli_v3.py  test_config.py  test_diagnostic_agent.py  test_evidence_models.py  test_graph_commands.py  test_graph_html.py  test_graph_store.py  test_mcp_workspace.py  test_models.py  test_parser.py  test_path_utils.py  test_perfect_features.py  test_resolver.py  test_retrieval_enhancements.py  test_retriever.py  test_sandbox.py  test_skeletonizer.py  test_sqlite_store.py  test_symbol_only.py  test_trace_parsers.py  test_traceback_parser.py  test_type_inference.py  test_vector_store.py  (+1 more)
(+95 files in other folders)
