[project]
name = "repomind"
version = "0.1.0"
description = "Repository Intelligence Platform - 代码仓库智能分析工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "networkx>=3.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "sqlite-vec>=0.1.0",
    "jedi>=0.19.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
repomind = "repomind.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repomind"]
